1.2.2 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented issue #12694: replace reflection test for class type with spl
  function.


1.2.1 - Monday 03 March 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #12477: missing backslash \ in file format part of configuration
  component tutorial.


1.2 - Monday 02 July 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Documentation fixes and updates.


1.2beta1 - Monday 07 May 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented issue #9965: Support for delayed initialization through
  ezcBaseInit.
- Implemented issue #10457: Unclear what $name in getSetting() of
  Configuration component means.
- Added the ezcConfigurationManager::reset() method that returns the 
  manager to its uninitialized state.
- Fixed issue #10110: Warnings in configuration tests with the posix extension
  is not enabled.


1.1 - Monday 18 December 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #9819: Let all components deal with the ezcBaseAutoloadException
  properly.


1.1beta1 - Monday 20 November 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added feature #9169: Ini files can also have comments that start with an ;
  now - instead of only using # as comment marker.


1.0.4 - Monday 09 October 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed a bug where the class name ezcConfigurationUnknownSetting was used
  instead of the correct name ezcConfigurationUnknownSettingException.


1.0.3 - Monday 28 August 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Refactored to use new ezcBaseStruct class to inherit all the structs from.


1.0.2 - Monday 12 June 2006