@@ -3,7 +3,9 @@
 
 - Implemented issue #12694: replace reflection test for class type with spl
   function.
-
+- Implemented issue #12911: Added the hasGroup() and getSettingsInGroup()
+  methods to ezcConfigurationManager to allow for fetching of all settings
+  in a group. (Patch by James Pic)
 
 1.2.1 - Monday 03 March 2008
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
